# MqttApplicationSamples

./: .gitignore  CMakePresets.json  my_change.patch
scenarios/tinykube_device/: CMakeLists.txt  README.md  RPC_Interface_and_Flowchart.md  main.c  mmd.txt
scenarios/tinykube_device/inc/: tinykube_device.h
scenarios/tinykube_device/libRuntimeController/: lib.c
scenarios/tinykube_device/libWasmRuntimeExecutor/: lib.c
scenarios/tinykube_device/protobuf/: AddWasmModuleCommandRequest.pb-c.c  AddWasmModuleCommandRequest.pb-c.h  AddWasmModuleCommandRequest.proto  AddWasmModuleCommandResponse.pb-c.c  AddWasmModuleCommandResponse.pb-c.h  AddWasmModuleCommandResponse.proto  Array_AddWasmModule_Request_WasmModuleContent.pb-c.c  Array_AddWasmModule_Request_WasmModuleContent.pb-c.h  Array_AddWasmModule_Request_WasmModuleContent.proto  CreateWamrRuntimeCommandRequest.pb-c.c  CreateWamrRuntimeCommandRequest.pb-c.h  CreateWamrRuntimeCommandRequest.proto  CreateWamrRuntimeCommandResponse.pb-c.c  CreateWamrRuntimeCommandResponse.pb-c.h  CreateWamrRuntimeCommandResponse.proto  DestroyWamrRuntimeCommandResponse.pb-c.c  DestroyWamrRuntimeCommandResponse.pb-c.h  DestroyWamrRuntimeCommandResponse.proto  Object_AddWasmModule_Request.pb-c.c  Object_AddWasmModule_Request.pb-c.h  Object_AddWasmModule_Request.proto  RemoveWasmModuleCommandRequest.pb-c.c  RemoveWasmModuleCommandRequest.pb-c.h  RemoveWasmModuleCommandRequest.proto  RemoveWasmModuleCommandResponse.pb-c.c  RemoveWasmModuleCommandResponse.pb-c.h  RemoveWasmModuleCommandResponse.proto  StartWasmModuleCommandRequest.pb-c.c  StartWasmModuleCommandRequest.pb-c.h  StartWasmModuleCommandRequest.proto  StartWasmModuleCommandResponse.pb-c.c  StartWasmModuleCommandResponse.pb-c.h  StartWasmModuleCommandResponse.proto  StopWasmModuleCommandRequest.pb-c.c  StopWasmModuleCommandRequest.pb-c.h  StopWasmModuleCommandRequest.proto  StopWasmModuleCommandResponse.pb-c.c  StopWasmModuleCommandResponse.pb-c.h  StopWasmModuleCommandResponse.proto
scenarios/tinykube_device/src/: main.c  wasm_controller.c  wasm_handler.c
scenarios/tinykube_device/wasm-module/: hello.wasm
